# intersect2d.rs

./: .gitignore  Cargo.toml  README.md  intersection_test.rs  large_test_1.rs
.github/workflows/: rust.yml
benches/: bench.rs
example/: fltk_gui.rs
src/: algorithm.rs  lib.rs
tests/: intersection_test.rs  large_test_1.rs  readme_tests.rs  self_intersecting_test.rs  simple_test_1.rs
