[package]
name = "intersect2d"
version = "0.4.0"
authors = ["eadf"]
edition = "2018"
description = "Line segment intersection detection"
readme = "README.md"
repository = "https://github.com/eadf/intersect2d.rs"
license = "AGPL-3.0"
keywords = ["intersection", "sweepline", "geometry"]

[[example]]
name = "fltk_gui"
path = "example/fltk_gui.rs"

[dependencies]
geo = ">=0.17.1,<0.19.0"
rb_tree = "^0.4.0"
approx = "^0.4.0"
num-traits = "^0.2.14"
ahash = "^0.7.2"
thiserror = "1.0.24"

[dev-dependencies]
fltk = "^1.0.2"
itertools = "^0.10.0"
criterion = "^0.3.4"

[features]
# this is used to print algorithm progression traces to the console
console_trace = []

[[bench]]
name = "bench"
harness = false